# advent

./: .gitignore
2020/day01/: Makefile  main.c  vector.h
2020/day02/: Cargo.toml
2020/day03/: aoc.zig  main.c  toboggan-tarjectory
2020/day04/: arena.h  main.c
2020/day05/: main.c
2020/day06/: main.c
2020/day07/: Cargo.toml
2020/day08/: main.c
2020/day09/: aoc.py  main.c
2020/day10/: aoc.zig
2020/day11/: aoc.zig
2020/day12/: main.c
2020/day13/: Cargo.toml
2020/day14/: hash_map.c  hashmap.h  main.c
2020/day15/: Makefile  collections.h  day15.zig  main.c  string8.h  wyhash.c
2020/day16/: arena.h  main.c
2020/day17/: main.c
2020/day18/: main.c
2021/day01/: go-aoc01.go  go.mod  sonar-sweep  sonar-sweep.c  sonar-sweep.py  zig-aoc01.zig
2021/day02/: dive  dive.py  go-aoc02.go  go.mod  zig-aoc02.zig
2021/day03/: binary-diagnostic  binary-diagnostic.py  zig-aoc03.zig
2021/day04/: giant-squid.zig  main.c
2021/day05/: hydrothermal-venture.zig  main.c  with-array.c
2021/day06/: lanternfish.zig
2021/day07/: main.c  treachery-of-wales.zig
2024/day20/: CMakeLists.txt
2024/day20/src/: libmaze.c  libmaze.h  main.c  main.rs
day02/: count_safe
day03/: part1.rs
day06/: main.rs
day07/: main.rs
day09/: main.rs
day1/: part1.rs  part1.sh  part2.sh
day10/: find_trail  main.rs
day12/: main.rs
day13/: main.rs
day14/: main.rs
day15/: pt2.rs
day2/: day2.py  main.rs  part1.rs  part2.rs
day3/: multplier.rs
day4/: main.rs
day5/: main.rs
day6/: pt1
day8/: main.rs
puzzle-lulu/: main.c  solve-puzzle.zig  word-puzzle
(+290 files in other folders)
